2013-12-11	Dominik Reichardt <dominus@users.sourceforge.net>
	* configure.ac, data/makefile.am, usecode/ucxt/data/makefile.am:
	  while cross compiling you can add a native built expack and head2data to the
	  path or point to them vie EXPACK and HEAD2DATA environment variables. This
	  should make cross compiling for iOS and other targets less annoying.

2013-11-21	Dominik Reichardt <dominus@users.sourceforge.net>
	* documentation, FAQ updated. Added Crowley's ifix/ireg reference chart to 
	  the Studio documentation.
	
2013-11-01	Dominik Reichardt <dominus@users.sourceforge.net>
	* usecode/ucinternal.cc: reenable the automatic Time Lord speech after
	  destryoing the generators. This was somehow broken 12 years ago. Thanks
	  to Marzo for finding this kludge.
	
2013-10-23	Dominik Reichardt <dominus@users.sourceforge.net>
	* effects.cc: anti magic storm egg was not recognized. Thus anti magic 
	  rain in the generators and the generators wasn't working correctly.

2013-10-21	Malignant Manor <malignantmanor@users.sourceforge.net>
	* usecode/ucinternal.cc: restrict container content deletion to BG
	  (un)sealed box. Fixes bug #1862. r7436 regression. The UI_remove_item
	  doesn't delete contents in SI. The (un)sealed box restriction may not be
	  needed for BG but I can't test all cases.

2013-10-10	Malignant Manor <malignantmanor@users.sourceforge.net>
	* combat.cc: Fix r6914 regression that caused party members to attack each
	  other after friendly fire occurred
	* usecode/ucinternal.cc: UI_remove_item now removes the contents if it
	  deletes a container. This stops the scroll from being in your inventory
	  when you deliver the package to Elynor.
	* schedule.cc: Fix crash caused by find_desk_items in desk schedule

2013-10-03	Malignant Manor <malignantmanor@users.sourceforge.net>
	* schedule.cc: Don't build the patrol code that starts at the nearest egg
	  since it will break some npcs like the automaton (npc 160) in Freedom.